<resources>
    <string name="app_name">BillingProject</string>
    <string name="id_edit_text">Please Enter Client ID</string>
    <string name="client_name_edit_text">Please Enter Client Name</string>
    <string name="product_name_edit_text">Please Enter Product Name</string>
    <string name="price_edit_text">Please Enter Product Price</string>
    <string name="quantity_edit_text">Please Enter Product Quantity</string>
    <string name="billingTitle_text_view">View Total Billing</string>
    <string name="billingInfo_text_view"> </string>
    <string name="totalInput_button">TOTAL INPUT BILLING</string>
    <string name="totalRecord_button">TOTAL RECORD BILLING</string>
    <string name="prevBilling_button">PREV BILLING</string>
    <string name="nextBilling_button">NEXT BILLING</string>
</resources>