<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="650dp"
        android:layout_gravity="top|center"
        android:layout_marginTop="30dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/id_edit_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/id_edit_text" />

        <EditText
            android:id="@+id/client_name_edit_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/client_name_edit_text" />

        <EditText
            android:id="@+id/product_name_edit_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/product_name_edit_text" />

        <EditText
            android:id="@+id/price_edit_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/price_edit_text" />

        <EditText
            android:id="@+id/quantity_edit_text"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="text"
            android:text="@string/quantity_edit_text" />

        <TextView
            android:id="@+id/billingTitle_text_view"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:text="@string/billingTitle_text_view"/>

        <TextView
            android:id="@+id/billingInfo_text_view"
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:text="@string/billingInfo_text_view"/>

        <Button
            android:id="@+id/totalInput_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            app:cornerRadius="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/totalInput_button"/>

        <Button
            android:id="@+id/totalRecord_button"
            android:layout_width="250dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            app:cornerRadius="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/totalRecord_button"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="75dp"
        android:layout_gravity="bottom|center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/prevBilling_button"
            android:layout_width="145dp"
            android:layout_height="50dp"
            app:cornerRadius="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/prevBilling_button"/>

        <Button
            android:id="@+id/nextBilling_button"
            android:layout_width="145dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            app:cornerRadius="5dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/nextBilling_button"/>

    </LinearLayout>

</FrameLayout>